2002-06-24  Seth Nickell  <snickell@stanford.edu>

	* font-properties.glade:
	* main.c: (setup_dialog):

	Add a font picker for controlling the window title font (and size).
	Set border widths nicely so things align.
	
2002-07-24  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): dist the pixel icons

2002-07-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85629
	* font-properties.glade  : Make wider to avoid clipping.

2002-06-27  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=86593
	* main.c (setup_dialog) : watch for missing icons

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * main.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* main.c (cb_dialog_response) : improve handling of help failures.

Sun May 26 11:38:48 2002  Jonathan Blandford  <jrb@gnome.org>

	* main.c (main): use APPID instead of argv[0]

Fri May 10 19:00:25 2002  Jonathan Blandford  <jrb@redhat.com>

	* main.c (DESKTOP_FONT_NAME_KEY): get it to use the right key.

2002-05-08  Jody Goldberg <jody@gnome.org>

	* main.c (cb_dialog_response) : new.
	(setup_dialog) : support help.

2002-04-27  Seth Nickell  <snickell@stanford.edu>

	* font-properties.desktop.in:

	Tweak categories and comment a little.
	
	* font-properties.glade:

	Change labels to be a little more descriptive,
	force dialogue to be a little larger.

2002-04-26  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* font-properties.glade:
	* main.c: (create_dialog), (setup_dialog), (main):

	Bring back in sync with the merged theme/font dialog.
	
Wed Apr 10 18:03:00 2002  Jonathan Blandford  <jrb@gnome.org>

	* font-properties.desktop.in (Exec): s/gnome2/gnome

2002-03-27  Lauris Kaplinski  <lauris@ximian.com>

	* main.c (response_cb): No responses here