@@ -1,3 +1,11 @@
+2002-08-19  Jody Goldberg <jody@gnome.org>
+
+	* font-properties.glade :
+	* main.c: (setup_dialog): merge in owen's patch to configure the
+	  window title font and the font to use for terminals.  This patch
+	  uses a metacity specific key for the window title.  Owen ? Seth ?
+	  Can you folk choose please.
+
 2002-06-24  Seth Nickell  <snickell@stanford.edu>
 
 	* font-properties.glade:
